# Scrappy-Doo

./: app.py  pyproject.toml
docs/: requirements.txt
