[tool.poetry]
name = "scrappy-doo"
version = "0.1.0"
description = "Modular scraping system with Streamlit UI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9.7,<3.9.9"
streamlit = "^1.27.0"
mkdocs-material = { version = "^9.5.0", extras = ["imaging"] }
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.6.0"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
